--- a/ProjectSample/pom.xml
+++ b/ProjectSample/pom.xml
@@ -10,6 +10,7 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>ThreadTool</module>
+      <module>ClassLoader</module>
   </modules>
 
   <properties>
